--- a/AtroposGame/Resources/layout/WiFi_main.axml
+++ b/AtroposGame/Resources/layout/WiFi_main.axml
@@ -128,7 +128,7 @@
                     android:id="@+id/btn_start_client"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send"
+                    android:text="Test"
                     android:visibility="gone" />
             </LinearLayout>
             <ScrollView
