--- a/AtroposGame/Resources/layout/MeleeAlpha.axml
+++ b/AtroposGame/Resources/layout/MeleeAlpha.axml
@@ -80,7 +80,33 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:cacheColorHint="#FFDAFF7F" />
-        <!--<RadioGroup
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right">
+            <EditText
+                android:id="@+id/mlrn_new_gesture_class_namefield"
+                android:hint="(New Cue-able)"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:inputType="textCapWords"
+                android:padding="5dp" />
+            <Button
+                android:id="@+id/mlrn_add_gesture_class_btn"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:enabled="false" />
+        </LinearLayout>
+    <!--<RadioGroup
             android:id="@+id/mlrn_trainmode_radiobuttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
