--- a/AtroposGame/Resources/layout/Main.axml
+++ b/AtroposGame/Resources/layout/Main.axml
@@ -2,42 +2,89 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/linearLayout1"
+      android:orientation="vertical">
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/holo_blue_light" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/linearLayout1"
-        android:orientation="vertical">
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/holo_blue_light" />
-        <ImageView
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+      <ImageView
+          android:id="@+id/role_samurai"
+          android:src="@drawable/hitter_logo"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+      <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:visibility="gone">
+        <!--<ImageView
             android:id="@+id/role_samurai"
             android:src="@drawable/hitter_logo"
             android:layout_width="wrap_content"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:layout_margin="5dp" />
-        <ImageView
-            android:id="@+id/role_decker"
-            android:src="@drawable/hacker_logo"
+            android:layout_height="match_parent" />-->
+        <TextView
+            android:id="@+id/role_samurai_storedNames"
+            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:layout_margin="5dp" />
-        <ImageView
-            android:id="@+id/role_mage"
-            android:src="@drawable/sorcerer_logo"
+            android:textAlignment="textEnd"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="3dip"
+            android:textColor="#ffffff"/>
+      </RelativeLayout>
+      <!--<LinearLayout
+          android:layout_height="match_parent"
+          android:layout_width="wrap_content"
+          android:minWidth="22dip"
+          android:gravity="center"
+          android:background="@android:drawable/alert_dark_frame">
+        <TextView
+            android:id="@+id/role_samurai_createBtn"
             android:layout_width="wrap_content"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:layout_margin="5dp" />
-        <ImageView
-            android:id="@+id/role_operative"
-            android:src="@drawable/spy_logo"
+            android:layout_height="wrap_content"
+            android:text="Create"
+            android:textSize="20dip"
+            android:textAlignment="center"/>
+        </LinearLayout>-->
+        <TextView
+            android:id="@+id/role_samurai_createBtn"
             android:layout_width="wrap_content"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:layout_margin="5dp" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="Create"
+            android:textSize="20dip"
+            android:textAlignment="center"
+            android:background="@android:drawable/alert_dark_frame"/>
+      </LinearLayout>
+      <ImageView
+          android:id="@+id/role_decker"
+          android:src="@drawable/hacker_logo"
+          android:layout_width="wrap_content"
+          android:layout_height="0dip"
+          android:layout_weight="1"
+          android:layout_margin="5dp" />
+      <ImageView
+          android:id="@+id/role_mage"
+          android:src="@drawable/sorcerer_logo"
+          android:layout_width="wrap_content"
+          android:layout_height="0dip"
+          android:layout_weight="1"
+          android:layout_margin="5dp" />
+      <ImageView
+          android:id="@+id/role_operative"
+          android:src="@drawable/spy_logo"
+          android:layout_width="wrap_content"
+          android:layout_height="0dip"
+          android:layout_weight="1"
+          android:layout_margin="5dp" />
+  </LinearLayout>
 </LinearLayout>
