--- a/AtroposGame/Resources/layout/QRoverlay.axml
+++ b/AtroposGame/Resources/layout/QRoverlay.axml
@@ -8,19 +8,25 @@
     android:background="@android:color/transparent"
     android:id="@+id/main"
     android:weightSum="1.0">
-  <ImageButton
-      android:id="@+id/qr_flashlight_button"
-      android:src="@drawable/ic_lightbulb"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="0.35"
+        android:gravity="center"
+        android:alpha="0.3"
+        android:background="#777777">
+        <ImageButton
+            android:id="@+id/qr_flashlight_button"
+            android:src="@drawable/ic_lightbulb"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="20dip"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent" />
+    </LinearLayout>
+<!--<RelativeLayout
       android:layout_width="match_parent"
-      android:layout_height="0dip"
-      android:layout_weight="0.5"
-      android:alpha="0.3"
-      android:background="#777777"
-      android:padding="20dip"
-      android:scaleType="centerInside"/>
-  <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="480dip">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,15 +44,46 @@
         android:scaleType="fitCenter"
         android:src="@drawable/qr_code_reticle_with_glow"
         android:visibility="gone"/>
-  </RelativeLayout>
-  <ImageButton
-      android:id="@+id/qr_cancel_button"
-      android:src="@drawable/ic_cancel"
-      android:layout_width="match_parent"
-      android:layout_height="0dip"
-      android:layout_weight="0.3"
-      android:alpha="0.3"
-      android:background="#777777"
-      android:padding="20dip"
-      android:scaleType="centerInside"/>
+  </RelativeLayout>-->
+    <LinearLayout
+        android:layout_height="0dip"
+        android:layout_weight="0.3"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="1.0">
+        <View
+            android:layout_width="0dip"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:alpha="0.3"
+            android:background="#777777" />
+        <ImageView
+            android:layout_width="0dip"
+            android:layout_weight="0.5"
+            android:layout_height="match_parent"
+            android:src="@drawable/qr_code_reticle"
+            android:scaleType="centerInside" />
+        <View
+            android:layout_width="0dip"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:alpha="0.3"
+            android:background="#777777" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="0.35"
+        android:gravity="center"
+        android:alpha="0.3"
+        android:background="#777777">
+        <ImageButton
+            android:id="@+id/qr_cancel_button"
+            android:src="@drawable/ic_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="20dip"
+            android:scaleType="centerInside"
+            android:background="@android:color/transparent" />
+    </LinearLayout>
 </LinearLayout>
