--- a/AtroposGame/Resources/layout/SettingsPage.axml
+++ b/AtroposGame/Resources/layout/SettingsPage.axml
@@ -37,11 +37,32 @@
             android:layout_margin="6dp"
             android:textColor="@android:color/holo_blue_dark" />
     </LinearLayout>
-    <Button
-        android:text="Developer Hotbutton"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@android:drawable/btn_default"
+        android:gravity="center_vertical"
+        android:layout_margin="6dp"
+        android:id="@+id/btn_dev_hotbutton">
+        <ImageView
+            android:src="@drawable/atropos_sigil"
+            android:layout_height="40dp"
+            android:layout_width="40dp"
+            android:scaleType="centerInside" />
+        <TextView
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:text="Function Tests"
+            android:textSize="22dp"
+            android:layout_margin="6dp"
+            android:textColor="@android:color/holo_blue_dark" />
+    </LinearLayout>
+    <!--<Button
+        android:text="Functionality Tests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_dev_hotbutton" />
+        android:id="@+id/btn_dev_hotbutton" />-->
     <Button
         android:text="Train New Spells"
         android:layout_width="wrap_content"
@@ -57,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:enabled="false"
+        android:checked="true"
         android:id="@+id/chbox_use_nfc" />
     <CheckBox
         android:text="Allow speaker sounds"
